header overlap fix

--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -26,6 +26,12 @@ button
 #wrapper
   min-height 100vh
 
+.header-anchor
+  &::before
+    content ""
+    display flex
+    margin-top 60px
+
 h1
   font-size $fsXLarge
   font-weight 400
